@@ -17,6 +17,7 @@ Version 1.5.11+svn:
    * Changed the widgets in the in game message dialog
    * The multiplayer dialog shows tooltips again
    * The textbox history now uses CTRL+TAB and CTRL+SHIFT+TAB
+   * Properly set the cursor when opening a dialog (bug #12961)
  * WML Engine:
    * Fix incorrect or doubled "sighted" events when delaying shroud update
    * Fix sometimes doubled "select" events
